apps/jsp-testing-15-may/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsp-testing-15-may
  namespace: prod
  labels:
    app: jsp-testing-15-may
    backstage.io/kubernetes-id: jsp-testing-15-may
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsp-testing-15-may
  template:
    metadata:
      labels:
        app: jsp-testing-15-may
        backstage.io/kubernetes-id: jsp-testing-15-may
        environment: prod
    spec:
      containers:
        - name: jsp-testing-15-may
          image: chaitanyapandeygspann/jsp-testing-15-may:1.0.1
          ports:
            - containerPort: 8080
