apps/jsp-testing-15-may/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsp-testing-15-may
  namespace: prod
  labels:
    backstage.io/kubernetes-id: jsp-testing-15-may
    environment: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /jsp-testing-15-may-prod(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: jsp-testing-15-may
                port:
                  number: 80
